--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,4 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=me.jaeuk.hr_module.domain
 
 # mapper 로그레벨 설정
-logging.level.com.atoz_develop.mybatissample.repository=TRACE
+logging.level.me.jaeuk.hr_module.repository=TRACE
